--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h1> Hello World! </h1>
-<h1> Welcome to Sashthamanik page! </h1>
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+<p>Welcome to Sashthamanik page!.</p>
+</body>
+</html>
