template add and modified

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1><b>ORNELLA</b> ALTUNYAN</h1>
+			<h1><b>Manikandan</b> Muthukrishnan </h1>
 			<hr>
-			CLOUD ADVOCATE
+			Senior Engineer
 			<hr>
 		</header>
 		<main>
@@ -20,15 +20,15 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">your-email@example.com</a>
+                        <a href="mailto:your-email@example.com">sashthamanik@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">gh-username</a>
+                        <a href="github.com/sashthamanik">sashthamanik</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                        <a href="linkedin.com/sashthamanik">sashthamanik</a>
                     </p>
 				</section>
 				<section>
